--- a/package.json
+++ b/package.json
@@ -2,23 +2,26 @@
     "name": "carnesurtek-server",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "dist/index.js",
     "scripts": {
-        "start": "node index.js",
+        "start": "tsc && node dist/index.js",
         "dev": "nodemon index"
     },
-    "author": "",
+    "author": "Abraham García Carrejo",
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "tslint": "^6.1.3",
+        "typescript": "^4.1.3",
+        "socket.io": "^3.0.5"
     },
     "devDependencies": {
         "@types/cors": "^2.8.9",
         "@types/express": "^4.17.9",
         "@types/socket.io": "^2.1.12",
-        "socket.io": "^3.0.5"
+
     }
 }
