--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "devDependencies": {
         "@types/cors": "^2.8.9",
         "@types/express": "^4.17.9",
-        "@types/socket.io": "^2.1.12",
-
+        "@types/socket.io": "^2.1.12"
     }
 }
