--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "tslint": "^6.1.3",
         "typescript": "^4.1.3",
-        "socket.io": "^3.0.5"
+        "tslint": "^6.1.3",
+        "socket.io": "^3.0.5",
+        "@types/cors": "^2.8.9",
+        "@types/express": "^4.17.9",
+        "@types/socket.io": "^2.1.12"
     },
     "devDependencies": {
         "@types/cors": "^2.8.9",
